--- a/templates/home.html
+++ b/templates/home.html
@@ -229,26 +229,26 @@
                             و بیشتر ..</p>
                     </div><!-- ends: .search_title_area -->
 
-                    <form action="https://www.rtl-theme.com/author/paradigmshift/" class="search_form">
+                    <form action="{% url 'search' %}" class="search_form" method="get">
                         <div class="atbd_seach_fields_wrapper">
                             <div class="single_search_field search_query">
-                                <input class="form-control search_fields" type="text"
+                                <input class="form-control search_fields" name="q" type="text"
                                        placeholder="به دنبال چه چیزی هستید؟">
                             </div>
                             <div class="single_search_field search_category">
-                                <select class="search_fields" id="at_biz_dir-category">
+                                <select class="search_fields" name="q" id="at_biz_dir-category">
                                     <option value="">انتخاب یک دسته</option>
-                                    <option value="automobile">خودرو</option>
-                                    <option value="education">آموزش</option>
-                                    <option value="event">رویداد</option>
+                                    {% for cat in category %}
+                                    <option value="{{ cat.title }}">{{ cat.title }}</option>
+                                    {% endfor %}
                                 </select>
                             </div>
                             <div class="single_search_field search_location">
-                                <select class="search_fields" id="at_biz_dir-location">
+                                <select class="search_fields" name="q" id="at_biz_dir-location">
                                     <option value="">انتخاب یک مکان</option>
-                                    <option value="ab">نمونه الف</option>
-                                    <option value="australia">تهران</option>
-                                    <option value="australia-australia">اصفهان</option>
+                                    {% for city in city %}
+                                    <option value="{{ city.title }}">{{ city.title }}</option>
+                                    {% endfor %}
                                 </select>
                             </div>
                             <div class="atbd_submit_btn">
@@ -260,30 +260,14 @@
                     </form><!-- ends: .search_form -->
                     <div class="directory_home_category_area">
                         <ul class="categories">
-                            <li>
-                                <a href="#">
-                                    <span class="color-primary"><i class="la la-cutlery"></i></span>
-                                    رستوران
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="color-success"><i class="la la-map-marker"></i></span>
-                                    مکان ها
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="color-warning"><i class="la la-shopping-cart"></i></span>
-                                    خرید
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <span class="color-danger"><i class="la la-bed"></i></span>
-                                    هتل
-                                </a>
-                            </li>
+                            {% for fav in favcat %}
+                                <li>
+                                    <a href="{{ fav.get_absolute_url }}">
+                                        <span class="color-primary"><i class="{{ fav.icon }}"></i></span>
+                                        {{ fav.title }}
+                                    </a>
+                                </li>
+                            {% endfor %}
                         </ul>
                     </div><!-- ends: .directory_home_category_area -->
                 </div><!-- ends: .col-lg-10 -->
@@ -378,7 +362,6 @@
                                                     class="la la-star"></i></span>
 
                                                 <span class="atbd_meta atbd_listing_price">{{ ads.proce }} تومان</span>
-                                                <span class="atbd_meta atbd_badge_open">اکنون باز</span>
 
                                             </div><!-- End atbd listing meta -->
                                             <div class="atbd_listing_data_list">
@@ -413,81 +396,6 @@
 
                         </div><!-- ends: .col-lg-4 -->
                     {% endfor %}
-                    <div class="col-lg-4 col-sm-6">
-
-
-                        <div class="atbd_single_listing ">
-                            <article class="atbd_single_listing_wrapper">
-                                <figure class="atbd_listing_thumbnail_area">
-                                    <div class="atbd_listing_image">
-                                        <a href="#">
-                                            <img src="{% static 'img/p1.jpg' %}" alt="listing image">
-                                        </a>
-                                    </div><!-- ends: .atbd_listing_image -->
-                                    <div class="atbd_author atbd_author--thumb">
-                                        <a href="#">
-                                            <img src="{% static 'img/author-thumb2.jpg' %}" alt="Author Image">
-                                            <span class="custom-tooltip">آرش، مالک</span>
-                                        </a>
-                                    </div>
-                                    <div class="atbd_thumbnail_overlay_content">
-                                        <ul class="atbd_upper_badge">
-                                            <li><span class="atbd_badge atbd_badge_featured">ویژه</span></li>
-                                        </ul><!-- ends .atbd_upper_badge -->
-                                    </div><!-- ends: .atbd_thumbnail_overlay_content -->
-                                </figure><!-- ends: .atbd_listing_thumbnail_area -->
-
-                                <div class="atbd_listing_info">
-                                    <div class="atbd_content_upper">
-                                        <h4 class="atbd_listing_title">
-                                            <a href="#">سیستم های گرما و هوای فلندرز</a>
-                                        </h4>
-
-                                        <div class="atbd_listing_meta">
-                                            <span class="atbd_meta atbd_listing_rating">4.5<i
-                                                    class="la la-star"></i></span>
-
-                                            <span class="atbd_meta atbd_listing_price">5500 تومان</span>
-                                            <span class="atbd_meta atbd_badge_open">اکنون باز</span>
-
-                                        </div><!-- End atbd listing meta -->
-                                        <div class="atbd_listing_data_list">
-                                            <ul>
-                                                <li>
-                                                    <p><span class="la la-map-marker"></span>تهران، ایران</p>
-                                                </li>
-                                                <li>
-                                                    <p><span class="la la-phone"></span>(415) 796-3633</p>
-                                                </li>
-                                                <li>
-                                                    <p><span class="la la-calendar-check-o"></span>ارسال شده 2 ماه قبل
-                                                    </p>
-                                                </li>
-                                            </ul>
-                                        </div><!-- End atbd listing meta -->
-
-                                    </div><!-- end .atbd_content_upper -->
-
-                                    <div class="atbd_listing_bottom_content">
-                                        <div class="atbd_content_left">
-                                            <div class="atbd_listing_category">
-                                                <a href="#"><span class="la la-glass"></span>رستوران</a>
-
-                                            </div>
-                                        </div>
-                                        <ul class="atbd_content_right">
-                                            <li class="atbd_count"><span class="la la-eye"></span>900+</li>
-                                            <li class="atbd_save">
-                                                <span class="la la-heart-o"></span>
-                                            </li>
-
-                                        </ul>
-                                    </div><!-- end .atbd_listing_bottom_content -->
-                                </div><!-- ends: .atbd_listing_info -->
-                            </article><!-- atbd_single_listing_wrapper -->
-                        </div>
-
-                    </div><!-- ends: .col-lg-4 -->
 
                     <div class="col-lg-12 text-center m-top-20">
                         <a href="#" class="btn btn-gradient btn-gradient-two">کاوش همه 200+</a>
@@ -569,49 +477,17 @@
 
                 <div class="cat-places-wrapper">
 
-                    <div class="category-place-single">
-                        <figure>
-                            <a href="#"><img src="{% static 'img/place1.jpg' %}" alt=""></a>
-                            <figcaption>
-                                <h3>لندن، انگلستان</h3>
-                                <p>68 آگهی</p>
-                            </figcaption>
-                        </figure>
-                    </div><!-- ends: .category-place-single -->
-
-
-                    <div class="category-place-single">
-                        <figure>
-                            <a href="#"><img src="{% static 'img/place2.png' %}" alt=""></a>
-                            <figcaption>
-                                <h3>تهران</h3>
-                                <p>68 آگهی</p>
-                            </figcaption>
-                        </figure>
-                    </div><!-- ends: .category-place-single -->
-
-
-                    <div class="category-place-single">
-                        <figure>
-                            <a href="#"><img src="{% static 'img/place3.png' %}" alt=""></a>
-                            <figcaption>
-                                <h3>سیدنی</h3>
-                                <p>68 آگهی</p>
-                            </figcaption>
-                        </figure>
-                    </div><!-- ends: .category-place-single -->
-
-
-                    <div class="category-place-single">
-                        <figure>
-                            <a href="#"><img src="{% static 'img/place4.png' %}" alt=""></a>
-                            <figcaption>
-                                <h3>پاریس، فرانسه</h3>
-                                <p>68 آگهی</p>
-                            </figcaption>
-                        </figure>
-                    </div><!-- ends: .category-place-single -->
-
+                    {% for fav in favcity %}
+                        <div class="category-place-single">
+                            <figure>
+                                <a href="#"><img src="{{ fav.image.url }}" alt="{{ fav.title }}"
+                                                 style="width: 545px;height: 270px;"></a>
+                                <figcaption>
+                                    <h3>{{ fav.title }}</h3>
+                                </figcaption>
+                            </figure>
+                        </div><!-- ends: .category-place-single -->
+                    {% endfor %}
                 </div><!-- ends: .col-lg-12 -->
 
             </div>
