--- a/templates/home.html
+++ b/templates/home.html
@@ -307,7 +307,7 @@
                                 <article class="atbd_single_listing_wrapper">
                                     <figure class="atbd_listing_thumbnail_area">
                                         <div class="atbd_listing_image">
-                                            <a href="#">
+                                            <a href="{{ ads.get_absolute_url }}">
                                                 <img src="{{ ads.pic.url }}" alt="{{ ads.title }}">
                                             </a>
                                         </div><!-- ends: .atbd_listing_image -->
