--- a/templates/accounts/sign_up.html
+++ b/templates/accounts/sign_up.html
@@ -1,10 +1,12 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% load crispy_forms_filters %}
+
 {% block content %}
     <div class="breadcrumb-wrapper content_above">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h1 class="page-title mt-lg-5">ثبت نام</h1>
+                    <h1 class="page-title mt-lg-5">ورود</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item mt-5"><a href="{% url 'home' %}">خانه</a></li>
@@ -24,22 +26,23 @@
                 <div class="col-lg">
                     <div class="widget atbd_widget widget-card contact-block">
                         <div class="atbd_widget_title">
-                            <h4><span class="la la-unlock"></span>ثبت نام</h4>
+                            <h4><span class="la la-unlock"></span>ورود</h4>
                         </div><!-- ends: .atbd_widget_title -->
                         <div class="atbdp-widget-listing-contact contact-form">
-                            <form action="" method="POST" id="atbdp-contact-form" class="form-vertical" role="form">
+                            <form action="{% url 'account:sign_up' %}" method="POST" id="atbdp-contact-form"
+                                  class="form-vertical" role="form">
                                 {% csrf_token %}
-                                {{ form  }}
-                                <button type="submit" class="btn btn-gradient btn-gradient-one btn-block mt-5 mb-5">ثبت نام
+                                {{ form|crispy }}
+                                <button type="submit" class="btn btn-gradient btn-gradient-one btn-block mt-5 mb-5">ورود
                                 </button>
                             </form>
-                            <span class="text-center h3 mt-4">درصورتی که حساب کاربری دارید <a href="{% url 'login' %}">وارد</a>شوید</span>
+                            <span class="text-center h3 mt-4">درصورتی که حساب کاربری ندارید <a
+                                    href="{% url 'account:sign_in' %}">ثبت نام</a> کنید </span>
                         </div><!-- ends: .atbdp-widget-listing-contact -->
                     </div><!-- ends: .widget -->
                 </div><!-- ends: .col-lg-8 -->
             </div>
         </div>
     </section><!-- ends: .contact-area -->
-
 
 {% endblock %}
