--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -26,14 +26,12 @@
                                 <h2>{{ profile.name }} {{ profile.family }}</h2>
                             </div>
                         </div><!-- ends: .atbd_author_avatar -->
+                        <div class="nav_button">
+                            <a href="{% url 'account:dashboard' %}" class="btn btn-info">داشبورد</a>
+                            <a href="{% url 'account:edit_profile' %}" class="btn btn-success">ویرایش پروفایل</a>
+                            <a href="{% url 'account:sign_out' %}" class="btn btn-secondary">خروج</a>
+                        </div>
 
-                        <div class="atbd_author_meta">
-                            <div class="atbd_listing_meta">
-                                <span class="atbd_meta atbd_listing_rating">4.5 <i class="la la-star"></i></span>
-                                <p class="meta-info"><span>22</span>بررسی</p>
-                            </div>
-                            <p class="meta-info"><span>15</span>آگهی</p>
-                        </div><!-- ends: .atbd_author_meta -->
                     </div><!-- ends: .atbd_auhor_profile_area -->
                 </div><!-- ends: .col-lg-12 -->
 
@@ -90,81 +88,73 @@
                     </div><!-- ends: .atbd_author_listings_area -->
 
                     <div class="row">
-                        <div class="col-lg-4 col-sm-6">
-
-
-                            <div class="atbd_single_listing ">
-                                <article class="atbd_single_listing_wrapper">
-                                    <figure class="atbd_listing_thumbnail_area">
-                                        <div class="atbd_listing_image">
-                                            <a href="#">
-                                                <img src="img/p1.jpg" alt="listing image">
-                                            </a>
-                                        </div><!-- ends: .atbd_listing_image -->
-                                        <div class="atbd_author atbd_author--thumb">
-                                            <a href="#">
-                                                <img src="img/author-thumb2.jpg" alt="Author Image">
-                                                <span class="custom-tooltip">آرش، مالک</span>
-                                            </a>
-                                        </div>
-                                        <div class="atbd_thumbnail_overlay_content">
-                                            <ul class="atbd_upper_badge">
-                                                <li><span class="atbd_badge atbd_badge_featured">ویژه</span></li>
-                                            </ul><!-- ends .atbd_upper_badge -->
-                                        </div><!-- ends: .atbd_thumbnail_overlay_content -->
-                                    </figure><!-- ends: .atbd_listing_thumbnail_area -->
-
-                                    <div class="atbd_listing_info">
-                                        <div class="atbd_content_upper">
-                                            <h4 class="atbd_listing_title">
-                                                <a href="#">سیستم های گرما و هوای فلندرز</a>
-                                            </h4>
-
-                                            <div class="atbd_listing_meta">
-                                                <span class="atbd_meta atbd_listing_rating">4.5<i
-                                                        class="la la-star"></i></span>
-
-                                                <span class="atbd_meta atbd_listing_price">5500 تومان</span>
-                                                <span class="atbd_meta atbd_badge_open">اکنون باز</span>
-
-                                            </div><!-- End atbd listing meta -->
-                                            <div class="atbd_listing_data_list">
-                                                <ul>
-                                                    <li>
-                                                        <p><span class="la la-map-marker"></span>تهران، ایران</p>
-                                                    </li>
-                                                    <li>
-                                                        <p><span class="la la-phone"></span>(415) 796-3633</p>
-                                                    </li>
-                                                    <li>
-                                                        <p><span class="la la-calendar-check-o"></span>ارسال شده 2 ماه
-                                                            قبل</p>
-                                                    </li>
-                                                </ul>
-                                            </div><!-- End atbd listing meta -->
-
-                                        </div><!-- end .atbd_content_upper -->
-
-                                        <div class="atbd_listing_bottom_content">
-                                            <div class="atbd_content_left">
-                                                <div class="atbd_listing_category">
-                                                    <a href="#"><span class="la la-glass"></span>رستوران</a>
-
-                                                </div>
+                        {% for ad in ads %}
+                            <div class="col-lg-4 col-sm-6">
+                                <div class="atbd_single_listing ">
+                                    <article class="atbd_single_listing_wrapper">
+                                        <figure class="atbd_listing_thumbnail_area">
+                                            <div class="atbd_listing_image">
+                                                <a href="{{ ad.get_absolute_url }}">
+                                                    <img src="{{ ad.pic.url }}" alt="{{ ad.title }}">
+                                                </a>
+                                            </div><!-- ends: .atbd_listing_image -->
+                                            <div class="atbd_author atbd_author--thumb">
+                                                <a href="#">
+                                                    <img src="{% static 'img/author-thumb2.jpg' %}" alt="Author Image">
+                                                    <span class="custom-tooltip">آرش، مالک</span>
+                                                </a>
                                             </div>
-                                            <ul class="atbd_content_right">
-                                                <li class="atbd_count"><span class="la la-eye"></span>900+</li>
-                                                <li class="atbd_save">
-                                                    <span class="la la-heart-o"></span>
-                                                </li>
+                                            <div class="atbd_thumbnail_overlay_content">
+                                                <ul class="atbd_upper_badge">
+                                                    <li><span class="atbd_badge atbd_badge_featured">ویژه</span></li>
+                                                </ul><!-- ends .atbd_upper_badge -->
+                                            </div><!-- ends: .atbd_thumbnail_overlay_content -->
+                                        </figure><!-- ends: .atbd_listing_thumbnail_area -->
 
-                                            </ul>
-                                        </div><!-- end .atbd_listing_bottom_content -->
-                                    </div><!-- ends: .atbd_listing_info -->
-                                </article><!-- atbd_single_listing_wrapper -->
-                            </div>
+                                        <div class="atbd_listing_info">
+                                            <div class="atbd_content_upper">
+                                                <h4 class="atbd_listing_title">
+                                                    <a href="{{ ad.get_absolute_url }}">{{ ad.title }}</a>
+                                                </h4>
 
-                        </div><!-- ends: .col-lg-4 -->
+                                                <div class="atbd_listing_meta">
+                                            <span class="atbd_meta atbd_listing_rating">4.5<i
+                                                    class="la la-star"></i></span>
+
+                                                    <span class="atbd_meta atbd_listing_price">{{ ad.proce }} تومان</span>
+
+                                                </div><!-- End atbd listing meta -->
+                                                <div class="atbd_listing_data_list">
+                                                    <ul>
+                                                        <li>
+                                                            <p><span class="la la-map-marker"></span>{{ ad.city }}</p>
+                                                        </li>
+                                                        <li>
+                                                            <p><span class="la la-phone"></span>{{ ad.phone }}</p>
+                                                        </li>
+                                                        <li>
+                                                            <p><span class="la la-calendar-check-o"></span>ارسال شده
+                                                                در {{ ad.publish_date }}
+                                                            </p>
+                                                        </li>
+                                                    </ul>
+                                                </div><!-- End atbd listing meta -->
+
+                                            </div><!-- end .atbd_content_upper -->
+
+                                            <div class="atbd_listing_bottom_content">
+                                                <div class="atbd_content_left">
+                                                    <div class="atbd_listing_category">
+                                                        <a href="#"><span class="la la-glass"></span>{{ ad.title }}</a>
+
+                                                    </div>
+                                                </div>
+                                            </div><!-- end .atbd_listing_bottom_content -->
+                                        </div><!-- ends: .atbd_listing_info -->
+                                    </article><!-- atbd_single_listing_wrapper -->
+                                </div>
+                            </div><!-- ends: .col-lg-4 -->
+                        {% endfor %}
                     </div>
                 </div><!-- ends: .col-lg-12 -->
             </div>
