--- a/templates/accounts/edit_profile.html
+++ b/templates/accounts/edit_profile.html
@@ -1,15 +1,56 @@
 {% extends "base.html" %}
-{% load static from staticfiles %}
+{% load static %}
 
-{% block title %}Edit Profile | {{ user }} {{ super }}{% endblock %}
+{% block content %}
+    {#    <div class="grid-100">#}
+    {#        <h1>Profile</h1>#}
+    {#        <form method="POST" actions="" enctype="multipart/form-data">#}
+    {#            {% csrf_token %}#}
+    {#            {{ form.as_p }}#}
+    {#            <input type="submit" class="button" value="save"/>#}
+    {#        </form>#}
+    {#    </div>#}
 
-{% block body %}
-    <div class="grid-100">
-        <h1>Profile</h1>
-        <form method="POST" actions="" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" class="button" value="save" />
-        </form>
-    </div>
+    <div class="breadcrumb-wrapper content_above">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h1 class="page-title">افزودن آگهی</h1>
+                </div>
+            </div>
+        </div>
+    </div><!-- ends: .breadcrumb-wrapper -->
+
+    </section>
+
+
+    <section class="add-listing-wrapper border-bottom section-bg section-padding-strict">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 offset-lg-1">
+                    <div class="atbd_content_module">
+                        <div class="atbd_content_module__tittle_area">
+                            <div class="atbd_area_title">
+                                <h4><span class="la la-user"></span>اطلاعات عمومی</h4>
+                            </div>
+                        </div>
+                        <div class="atbdb_content_module_contents">
+                            <form action="" method="post">
+                                {% csrf_token %}
+                                {{ form.as_p }}
+                                <div class="col-lg-10 offset-lg-1 text-center">
+                                    <div class="btn_wrap list_submit m-top-25">
+                                        <button type="submit" class="btn btn-primary btn-lg listing_submit_btn">ذخیره
+                                        </button>
+                                    </div>
+                                </div><!-- ends: .col-lg-10 -->
+
+                            </form>
+                        </div><!-- ends: .atbdb_content_module_contents -->
+                    </div><!-- ends: .atbd_content_module -->
+                </div><!-- ends: .col-lg-10 -->
+            </div>
+        </div>
+    </section><!-- ends: .add-listing-wrapper -->
+
 {% endblock %}
