--- a/templates/ad_detail.html
+++ b/templates/ad_detail.html
@@ -411,7 +411,7 @@
                         <div class="widget-body atbd_author_info_widget">
                             <div class="atbd_avatar_wrapper">
                                 <div class="atbd_review_avatar">
-                                    <img src="img/avatar-60x60.jpg" alt="Avatar Image">
+                                    <img src="{{ user.pic.url }}" alt="Avatar Image">
                                 </div>
                                 <div class="atbd_name_time">
                                     <h4>املاک و مستغلات زفایر <span class="verified" data-toggle="tooltip"
