--- a/templates/editad.html
+++ b/templates/editad.html
@@ -1,8 +1,5 @@
-{% extends "base.html" %}
-{% load static %}
-
+{% extends 'base.html' %}
 {% block content %}
-
     <div class="breadcrumb-wrapper content_above">
         <div class="container">
             <div class="row">
