--- a/templates/home.html
+++ b/templates/home.html
@@ -133,18 +133,18 @@
                                         <div class="author__access_area">
                                             <ul class="d-flex list-unstyled align-items-center">
                                                 <li>
-                                                    <a href="add-listing.html"
+                                                    <a href="{% url 'create_advertise' %}"
                                                        class="btn btn-xs btn-gradient btn-gradient-two">
                                                         <span class="la la-plus"></span> افزودن آگهی
                                                     </a>
                                                 </li>
                                                 <li>
                                                     {% if user.is_authenticated %}
-                                                        <a href="#" class="access-link">پنل کاربری</a>
+                                                        <a href="{% url 'account:dashboard' %}" class="access-link">پنل کاربری</a>
                                                     {% else %}
-                                                        <a href="{% url 'register' %}" class="access-link">ورود</a>
+                                                        <a href="{% url 'account:sign_in' %}" class="access-link">ورود</a>
                                                         <span>یا</span>
-                                                        <a href="{% url 'register' %}" class="access-link">ثبت نام</a>
+                                                        <a href="{% url 'account:sign_up' %}" class="access-link">ثبت نام</a>
                                                     {% endif %}
                                                 </li>
                                             </ul>
@@ -371,7 +371,7 @@
                     {% endfor %}
 
                     <div class="col-lg-12 text-center m-top-20">
-                        <a href="#" class="btn btn-gradient btn-gradient-two">کاوش همه 200+</a>
+                        <a href="{% url 'list_advertise' %}" class="btn btn-gradient btn-gradient-two">کاوش همه</a>
                     </div>
                 </div>
             </div><!-- ends: .listing-cards-wrapper -->
