--- a/templates/nav.html
+++ b/templates/nav.html
@@ -32,7 +32,7 @@
                                     <div class="logo logo-top">
                                         <a href="{% url 'home' %}"><img
                                                 src="{% static 'img/logo-white.png' %}" alt="logo image"
-                                                                  class=" img-fluid"></a>
+                                                class=" img-fluid"></a>
                                     </div>
                                 </div><!-- ends: .logo-wrapper -->
 
@@ -139,39 +139,28 @@
                                                 </form>
                                             </div>
                                         </div>
-                                        <div class="search-categories">
-                                            <ul class="list-unstyled">
-                                                <li><a href="#"><span class="la la-glass bg-danger"></span> غذا و
-                                                    نوشیدنی</a></li>
-                                                <li><a href="#"><span class="la la-cutlery bg-primary"></span>
-                                                    رستوران</a></li>
-                                                <li><a href="#"><span class="la la-map-marker bg-success"></span> مکان
-                                                    ها</a></li>
-                                                <li><a href="#"><span class="la la-shopping-cart bg-secondary"></span>
-                                                    خرید و فروشگاه</a></li>
-                                                <li><a href="#"><span class="la la-bed bg-info"></span> هتل</a></li>
-                                                <li><a href="#"><span class="la la-bank bg-warning"></span> تاریخ و هنر</a>
-                                                </li>
-                                            </ul>
-                                        </div>
                                     </div><!-- ends: .search-wrapper -->
                                     <!-- start .author-area -->
                                     <div class="author-area">
                                         <div class="author__access_area">
                                             <ul class="d-flex list-unstyled align-items-center">
                                                 <li>
-                                                    <a href="add-listing.html"
+                                                    <a href="{% url 'create_advertise' %}"
                                                        class="btn btn-xs btn-gradient btn-gradient-two">
                                                         <span class="la la-plus"></span> افزودن آگهی
                                                     </a>
                                                 </li>
                                                 <li>
-                                                    <a href="#" class="access-link" data-toggle="modal"
-                                                       data-target="#login_modal">ورود</a>
-                                                    <span>یا</span>
-                                                    <a href="#" class="access-link" data-toggle="modal"
-                                                       data-target="#signup_modal">ثبت نام</a>
-
+                                                    {% if user.is_authenticated %}
+                                                        <a href="{% url 'account:dashboard' %}" class="access-link">پنل
+                                                            کاربری</a>
+                                                    {% else %}
+                                                        <a href="{% url 'account:sign_in' %}"
+                                                           class="access-link">ورود</a>
+                                                        <span>یا</span>
+                                                        <a href="{% url 'account:sign_up' %}" class="access-link">ثبت
+                                                            نام</a>
+                                                    {% endif %}
                                                 </li>
                                             </ul>
                                         </div>
